# bitcoin-rust-learning

./: .gitignore  Cargo.toml  README.md  build.rs
src/: cli.yaml  logger.rs  main.rs  signals.rs
src/client/: error.rs  mod.rs
src/server/: api.rs  app.rs  app_state.rs  error.rs  json.rs  mod.rs  state.rs
src/server/bitcoind/: error.rs  json.rs  mod.rs  rest.rs  rpc.rs
