[package]
name = "bitcoin_rust_learning"
version = "0.1.0"
authors = ["Kirill Fomichev <fanatid@ya.ru>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
awc = "1.0.1"
clap = {version = "2.33", features = ["yaml"]}
env_logger = "0.7.1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"

[build-dependencies]
toml = "0.5"
