[package]
name = "bitcoin_rust_learning"
version = "0.1.0"
authors = ["Kirill Fomichev <fanatid@ya.ru>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
clap = { version = "2.33", features = ["yaml"] }
env_logger = "0.7.1"
futures = "0.3"
hyper = "0.13.2"
log = "0.4"
quick-error = "1.2.3"
reqwest = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2.11", features = ["rt-core", "io-driver", "io-util", "tcp", "time", "time", "macros", "sync", "signal"] }
url = "2.1.1"

[build-dependencies]
toml = "0.5"
